--- a/TestGit/TestGit/pom.xml
+++ b/TestGit/TestGit/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>FakerExample</artifactId>
+    <artifactId>TestGit</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -13,15 +13,5 @@
         <maven.compiler.target>19</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependencies>
-        <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
-        <dependency>
-            <groupId>com.github.javafaker</groupId>
-            <artifactId>javafaker</artifactId>
-            <version>1.0.2</version>
-        </dependency>
-
-    </dependencies>
 
 </project>
